force-app/main/default/objects/Account/fields/CONCO_OPCO__c.field-meta.xml
<CustomField>
    <fullName>CONCO_OPCO__c</fullName>
    <inlineHelpText>What is the Shell Contracting Entity</inlineHelpText>
    <label>CONCO/ OPCO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Brunei Daruss.</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Cape Verde</fullName>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Greece</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>Mauritius</fullName>
            </value>
            <value>
                <fullName>Morocco</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Norway</fullName>
            </value>
            <value>
                <fullName>Oman</fullName>
            </value>
            <value>
                <fullName>Other - Direct via Shell Trading</fullName>
            </value>
            <value>
                <fullName>Other - via (Spain)</fullName>
            </value>
            <value>
                <fullName>Other - via Joint Venture (India)</fullName>
            </value>
            <value>
                <fullName>Other - Via JV ( Brazil)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>