force-app/main/default/objects/Account/fields/Contingent_Credit__c.field-meta.xml
<CustomField>
    <fullName>Contingent_Credit__c</fullName>
    <inlineHelpText>This is the limit that credit give for fixed price deals - must be entered once credit has cleared the PFE application</inlineHelpText>
    <label>Contingent Credit Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>