force-app/main/default/objects/Account/fields/Contingent_Credit_Limit_Traded_Hub__c.field-meta.xml
<CustomField>
    <fullName>Contingent_Credit_Limit_Traded_Hub__c</fullName>
    <inlineHelpText>Enter the traded Hub PFE limit that is apptoved by Shell Trading ie not SMP.</inlineHelpText>
    <label>Contingent Credit Limit - Traded Hub</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>