force-app/main/default/objects/Account/fields/Contract_Execution__c.field-meta.xml
<CustomField>
    <fullName>Contract_Execution__c</fullName>
    <description>Execution date of Master Agreement</description>
    <label>Contract Execution</label>
    <type>Date</type>
</CustomField>