force-app/main/default/objects/Account/fields/Country_HCDM__c.field-meta.xml
<CustomField>
    <fullName>Country_HCDM__c</fullName>
    <label>Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Bulgaria</fullName>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Hungary</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
            <value>
                <fullName>Slovakia</fullName>
            </value>
            <value>
                <fullName>Slovenia</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
            <value>
                <fullName>Switzerland</fullName>
            </value>
            <value>
                <fullName>Turkey</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>