force-app/main/default/objects/Account/fields/CRCO__c.field-meta.xml
<CustomField>
    <fullName>CRCO__c</fullName>
    <inlineHelpText>This is tyhe Aviation number (CRCO) or The EU ETS number</inlineHelpText>
    <label>CRCO / CITL Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>