force-app/main/default/objects/Account/fields/Credit_Limit_Expiry_Traded_Hub__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Expiry_Traded_Hub__c</fullName>
    <label>Credit Limit Expiry- Traded Hub</label>
    <type>Date</type>
</CustomField>