force-app/main/default/objects/Account/fields/Credit_Line__c.field-meta.xml
<CustomField>
    <fullName>Credit_Line__c</fullName>
    <label>Nominal Credit line</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>