force-app/main/default/objects/Account/fields/Credit_Line_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Credit_Line_Expiry__c</fullName>
    <inlineHelpText>Enter date when credit dept want this to expire and then  you must apply at least one month before for an update</inlineHelpText>
    <label>Credit Line Expiry</label>
    <type>Date</type>
</CustomField>