force-app/main/default/objects/Account/fields/Credit_Pre_Approved__c.field-meta.xml
<CustomField>
    <fullName>Credit_Pre_Approved__c</fullName>
    <description>Has the business pre-approved credit?</description>
    <inlineHelpText>Enter info on when the CCL was approved by credit and date and any other info</inlineHelpText>
    <label>Credit Pre-Approved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>