force-app/main/default/objects/Account/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <label>Credit Rating</label>
    <length>6</length>
    <type>Text</type>
</CustomField>