force-app/main/default/objects/Account/fields/Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>Credit_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credit Value</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>