force-app/main/default/objects/Account/fields/Current_No_of_Deals__c.field-meta.xml
<CustomField>
    <fullName>Current_No_of_Deals__c</fullName>
    <description>This is the Current No. of Deals that are running for the customer.</description>
    <inlineHelpText>This is the Current No. of LIVE Deals that are running for the customer</inlineHelpText>
    <label>Current No. of Deals</label>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterThan</operation>
        <value>12/1/2022</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Deal Done</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>