force-app/main/default/objects/Account/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>Customer volume, Total demand units/year</description>
    <inlineHelpText>Total Customer volume for their fuel purchases-  Total demand tonnes year</inlineHelpText>
    <label>Total Customer demand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>