force-app/main/default/objects/Account/fields/Customer_Business__c.field-meta.xml
<CustomField>
    <fullName>Customer_Business__c</fullName>
    <label>Customer Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Petrochem</fullName>
            </value>
            <value>
                <fullName>PowerGen</fullName>
            </value>
            <value>
                <fullName>Refining</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>