force-app/main/default/objects/Account/fields/Customer_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segmentation__c</fullName>
    <label>Customer Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Market Counterparty / Competitor</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>