force-app/main/default/objects/Account/fields/Customer_Surchage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Surchage__c</fullName>
    <formula>IF(ISPICKVAL( Account_Type__c ,&apos;Premium&apos;), $Label.Premium , $Label.Non_Premium )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Surchage</label>
    <type>Text</type>
</CustomField>