force-app/main/default/objects/Account/fields/DE01_Customer_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>DE01_Customer_Credit_Limit__c</fullName>
    <label>DE01 Customer Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>