force-app/main/default/objects/Account/fields/Deals_Done_2008__c.field-meta.xml
<CustomField>
    <fullName>Deals_Done_2008__c</fullName>
    <label>Deals Done 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>