force-app/main/default/objects/Account/fields/Deals_Trial__c.field-meta.xml
<CustomField>
    <fullName>Deals_Trial__c</fullName>
    <label># Deals - Trial</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>