force-app/main/default/objects/Account/fields/Deals_via_OpCO__c.field-meta.xml
<CustomField>
    <fullName>Deals_via_OpCO__c</fullName>
    <label># Deals Full- OpCo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>