force-app/main/default/objects/Account/fields/Deals_vial_Trading__c.field-meta.xml
<CustomField>
    <fullName>Deals_vial_Trading__c</fullName>
    <label># Deals vial Trading</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>