force-app/main/default/objects/Account/fields/Delivery_Block__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Block__c</fullName>
    <description>Delivery Block</description>
    <label>Delivery Block</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Credit limit</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Political reasons</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Bottleneck material</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Export papers missng</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Check free of ch.dlv</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>No printing</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Quantity Change</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Kanban Delivery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>