force-app/main/default/objects/Account/fields/DEX_CODE__c.field-meta.xml
<CustomField>
    <fullName>DEX_CODE__c</fullName>
    <description>Counterparty DEX code</description>
    <label>DEX CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>