force-app/main/default/objects/Account/fields/Embedded_Actual_kt__c.field-meta.xml
<CustomField>
    <fullName>Embedded_Actual_kt__c</fullName>
    <label>Actual Value (k$)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>