force-app/main/default/objects/Account/fields/Embedded_Target_kt__c.field-meta.xml
<CustomField>
    <fullName>Embedded_Target_kt__c</fullName>
    <label>Target Value (k$)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>