force-app/main/default/objects/Account/fields/EPTB_Last_Contacted__c.field-meta.xml
<CustomField>
    <fullName>EPTB_Last_Contacted__c</fullName>
    <label>EPTB Last Contacted</label>
    <type>Date</type>
</CustomField>