force-app/main/default/objects/Account/fields/Estimated_Jet_Fuel_Usage__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Jet_Fuel_Usage__c</fullName>
    <description>Estimated Jet Fuel Usage based on expected 2012 EU ETS Emissions. Note - Only covers flights into, out of, or within the EU.</description>
    <formula>Aviation_Expected_2012_Emissions__c  / 3.15</formula>
    <inlineHelpText>Estimated Jet Fuel Usage based on expected 2012 EU ETS Emissions. Note - Only covers flights into, out of, or within the EU.</inlineHelpText>
    <label>Estimated Jet Fuel Usage (MT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>