force-app/main/default/objects/Account/fields/ETS_Interest__c.field-meta.xml
<CustomField>
    <fullName>ETS_Interest__c</fullName>
    <label>ETS Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EU ETS</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Dutch NOx</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>USA RGGI</fullName>
            </value>
            <value>
                <fullName>USA West Coast</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>