force-app/main/default/objects/Account/fields/EU_ETS__c.field-meta.xml
<CustomField>
    <fullName>EU_ETS__c</fullName>
    <description>Remaining EU ETS Phase II CER/ERU Capacity.</description>
    <inlineHelpText>Remaining EU ETS Phase II CER/ERU Capacity.</inlineHelpText>
    <label>EU ETS Remaining Phase II CER/ERU Capac.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>