force-app/main/default/objects/Account/fields/EU_ETS_Allocation_2008__c.field-meta.xml
<CustomField>
    <fullName>EU_ETS_Allocation_2008__c</fullName>
    <description>EU ETS Allocation for 2008.</description>
    <inlineHelpText>EU ETS Allocation for 2008.</inlineHelpText>
    <label>EU ETS Allocation 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>