force-app/main/default/objects/Account/fields/EU_ETS_Allocation_2009__c.field-meta.xml
<CustomField>
    <fullName>EU_ETS_Allocation_2009__c</fullName>
    <description>EU ETS Allocation for 2009.</description>
    <inlineHelpText>EU ETS Allocation for 2009.</inlineHelpText>
    <label>EU ETS Allocation 2009</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>