force-app/main/default/objects/Account/fields/EU_ETS_Net_Position_2008__c.field-meta.xml
<CustomField>
    <fullName>EU_ETS_Net_Position_2008__c</fullName>
    <description>Net EU ETS position for 2008.</description>
    <formula>EU_ETS_Allocation_2008__c  -  EU_ETS_Emissions_2008__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net EU ETS position for 2008.</inlineHelpText>
    <label>EU ETS Net Position 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>