force-app/main/default/objects/Account/fields/EU_ETS_Sector__c.field-meta.xml
<CustomField>
    <fullName>EU_ETS_Sector__c</fullName>
    <label>EU ETS Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cement-Lime-Glass</fullName>
            </value>
            <value>
                <fullName>Metals</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Power &amp; Heat</fullName>
            </value>
            <value>
                <fullName>Pulp &amp; Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>