force-app/main/default/objects/Account/fields/EUA_Annual_Allocation_Phase_II__c.field-meta.xml
<CustomField>
    <fullName>EUA_Annual_Allocation_Phase_II__c</fullName>
    <label>EUA Annual Allocation (Phase II)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>