force-app/main/default/objects/Account/fields/EUA_Volume_Traded__c.field-meta.xml
<CustomField>
    <fullName>EUA_Volume_Traded__c</fullName>
    <inlineHelpText>Total EUA volume done with customer to date</inlineHelpText>
    <label>EUA Volume Traded</label>
    <length>50</length>
    <type>Text</type>
</CustomField>