force-app/main/default/objects/Account/fields/Exisiting_PFE__c.field-meta.xml
<CustomField>
    <fullName>Exisiting_PFE__c</fullName>
    <inlineHelpText>This is the total PFE&apos;s for all live deals that are open. This excludes all current deals ending in the current month +1 month.</inlineHelpText>
    <label>PFE Consumed</label>
    <summarizedField>Opportunity.PFE_USD__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Risk Marketing Paper, Risk Marketing Physical, US - B2B Risk Marketing</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Deal Done</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterThan</operation>
        <value>1/1/2023</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Shell_Entity__c</field>
        <operation>notContain</operation>
        <value>Shell Trading Rotterdam (STR)</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>