force-app/main/default/objects/Account/fields/Expected_Margin_MT__c.field-meta.xml
<CustomField>
    <fullName>Expected_Margin_MT__c</fullName>
    <inlineHelpText>What ntotal C3 margin do you think the OpCo can make from Fixed price deals</inlineHelpText>
    <label>Expected Margin</label>
    <precision>16</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>