force-app/main/default/objects/Account/fields/Financial_Status__c.field-meta.xml
<CustomField>
    <fullName>Financial_Status__c</fullName>
    <label>Financial Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NFC+</fullName>
            </value>
            <value>
                <fullName>NFC</fullName>
            </value>
            <value>
                <fullName>FC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>