force-app/main/default/objects/Account/fields/Free_Allow_both_Sell_Buy_legd__c.field-meta.xml
<CustomField>
    <fullName>Free_Allow_both_Sell_Buy_legd__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>Use 1 - if only on one leg   and  2 if both legs --- if on 2 legs will double potential margin</inlineHelpText>
    <label>Free Allow - both Sell/Buy legd</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>