force-app/main/default/objects/Account/fields/Free_Allow_probability__c.field-meta.xml
<CustomField>
    <fullName>Free_Allow_probability__c</fullName>
    <inlineHelpText>What do you estimate the probability is of trading this</inlineHelpText>
    <label>Free Allow - % probability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>