force-app/main/default/objects/Account/fields/Free_Allow_Shell_Target_Vol__c.field-meta.xml
<CustomField>
    <fullName>Free_Allow_Shell_Target_Vol__c</fullName>
    <formula>Free_Allow_probability__c  *  Free_Allowances_Targeting__c  *  Free_Allow_both_Sell_Buy_legd__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free Allow - Shell Target Vol</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>