force-app/main/default/objects/Account/fields/Free_Allowance_Margin__c.field-meta.xml
<CustomField>
    <fullName>Free_Allowance_Margin__c</fullName>
    <formula>Free_Allow_probability__c  *  Free_Allowances_Targeting__c * Free_Allow_both_Sell_Buy_legd__c * Free_Allowance_Margin_Potential__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the target $ from free alowances</inlineHelpText>
    <label>Free Allowance - Potential Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>