force-app/main/default/objects/Account/fields/Free_Allowance_Margin_Potential__c.field-meta.xml
<CustomField>
    <fullName>Free_Allowance_Margin_Potential__c</fullName>
    <inlineHelpText>Enter what the margin target is</inlineHelpText>
    <label>Free Allow - Margin $/t</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>