force-app/main/default/objects/Account/fields/Free_Allowances_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Free_Allowances_Targeting__c</fullName>
    <inlineHelpText>Please enter how many tonnes you are targeting to trade</inlineHelpText>
    <label>Free Allowances Target (T)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>