force-app/main/default/objects/Account/fields/G_P_Actual_Margin__c.field-meta.xml
<CustomField>
    <fullName>G_P_Actual_Margin__c</fullName>
    <label>G&amp;P Actual Margin €</label>
    <length>50</length>
    <type>Text</type>
</CustomField>