force-app/main/default/objects/Account/fields/G_P_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>G_P_Contract_Signed__c</fullName>
    <label>G&amp;P Contract - Signed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>