force-app/main/default/objects/Account/fields/G_P_Generation_Facilities__c.field-meta.xml
<CustomField>
    <fullName>G_P_Generation_Facilities__c</fullName>
    <label>G&amp;P Generation Facilities</label>
    <length>200</length>
    <type>Text</type>
</CustomField>