force-app/main/default/objects/Account/fields/G_P_Priority__c.field-meta.xml
<CustomField>
    <fullName>G_P_Priority__c</fullName>
    <label>G&amp;P Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>