force-app/main/default/objects/Account/fields/GAP__c.field-meta.xml
<CustomField>
    <fullName>GAP__c</fullName>
    <formula>Actual_Margin_2011__c   - Potential_Contribution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GAP (SPANCOP-Actual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>