force-app/main/default/objects/Account/fields/Global_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Manager__c</fullName>
    <inlineHelpText>Is this a global account manger for Aviation</inlineHelpText>
    <label>Is this a Global Account ?</label>
    <length>5</length>
    <type>Text</type>
</CustomField>