force-app/main/default/objects/Account/fields/Global_AM_Name__c.field-meta.xml
<CustomField>
    <fullName>Global_AM_Name__c</fullName>
    <inlineHelpText>What is the Global Am Name</inlineHelpText>
    <label>Global AM Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>