force-app/main/default/objects/Account/fields/GSAP_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Account_Name__c</fullName>
    <description>This is the field where the account name from Chemical GSAP will be mapped to account name from P80</description>
    <label>GSAP Account Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>