force-app/main/default/objects/Account/fields/GSAP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Account_Number__c</fullName>
    <description>This is the field where the account number from Chemical GSAP will be mapped to account number from P80</description>
    <label>GSAP Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>