force-app/main/default/objects/Account/fields/GSAP_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Customer_Code__c</fullName>
    <label>GSAP Customer Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>