force-app/main/default/objects/Account/fields/Has_MRC__c.field-meta.xml
<CustomField>
    <fullName>Has_MRC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has MRC</label>
    <type>Checkbox</type>
</CustomField>