force-app/main/default/objects/Account/fields/HCDM_Past_Year_average_margin_tonne__c.field-meta.xml
<CustomField>
    <fullName>HCDM_Past_Year_average_margin_tonne__c</fullName>
    <label>Past Year average margin ($/tonne)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>