force-app/main/default/objects/Account/fields/HCDM_Past_Year_Physical_margin__c.field-meta.xml
<CustomField>
    <fullName>HCDM_Past_Year_Physical_margin__c</fullName>
    <label>Past Year Physical margin ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>