force-app/main/default/objects/Account/fields/HCDM_Potential_additional_margin_mt__c.field-meta.xml
<CustomField>
    <fullName>HCDM_Potential_additional_margin_mt__c</fullName>
    <label>Potential additional margin ($/mt)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>