force-app/main/default/objects/Account/fields/HCDM_Potential_additional_volume_KT__c.field-meta.xml
<CustomField>
    <fullName>HCDM_Potential_additional_volume_KT__c</fullName>
    <label>Potential additional volume (KT)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>